# ChangeLog for dev-ruby/actionmailer
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionmailer/ChangeLog,v 1.76 2008/05/13 13:37:57 armin76 Exp $

  13 May 2008; Raúl Porcel <armin76@gentoo.org> actionmailer-2.0.2.ebuild:
  ia64 stable wrt #221309

  12 May 2008; Markus Rothe <corsair@gentoo.org> actionmailer-2.0.2.ebuild:
  Stable on ppc64; bug #221309

  11 May 2008; Ferris McCormick <fmccor@gentoo.org>
  actionmailer-2.0.2.ebuild:
  Sparc stable --- part of Bug #221309 --- Good for about 5 months.

  11 May 2008; Markus Meier <maekke@gentoo.org> actionmailer-2.0.2.ebuild:
  x86 stable, bug #221309

  11 May 2008; Hans de Graaff <graaff@gentoo.org> actionmailer-2.0.2.ebuild:
  Stable on amd64, bug #221309

*actionmailer-2.0.2 (18 Dec 2007)

  18 Dec 2007; Hans de Graaff <graaff@gentoo.org>
  +actionmailer-2.0.2.ebuild:
  Version bump for Rails 2.0.2

  01 Dec 2007; Christoph Mende <angelos@gentoo.org>
  actionmailer-1.3.6.ebuild:
  Stable on amd64 wrt bug #200159

  01 Dec 2007; Hans de Graaff <graaff@gentoo.org>
  -actionmailer-1.3.2.ebuild, -actionmailer-1.3.3.ebuild,
  -actionmailer-1.3.4.ebuild:
  Remove old vulnerable versions

  27 Nov 2007; Raúl Porcel <armin76@gentoo.org> actionmailer-1.3.6.ebuild:
  ia64/sparc stable wrt security #200159

  27 Nov 2007; Brent Baude <ranger@gentoo.org> actionmailer-1.3.6.ebuild:
  Marking actionmailer-1.3.6 ppc64 for bug 200159

  26 Nov 2007; Brent Baude <ranger@gentoo.org> actionmailer-1.3.6.ebuild:
  Marking actionmailer-1.3.6 ppc for bug 200159

  26 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  actionmailer-1.3.6.ebuild:
  stable x86, security bug 200159

*actionmailer-1.3.6 (25 Nov 2007)

  25 Nov 2007; Hans de Graaff <graaff@gentoo.org>
  +actionmailer-1.3.6.ebuild:
  Version bump for Rails 1.2.6, security bug #200159

  21 Oct 2007; Steve Dibb <beandog@gentoo.org> actionmailer-1.3.5.ebuild:
  amd64 stable
